--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
             <version>${camunda.spring.boot.starter.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.camunda.bpm.springboot</groupId>
-            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
-            <version>${camunda.spring.boot.starter.version}</version>
-        </dependency>
+<!--        <dependency>
+            <groupId>org.camunda.bpm.extension</groupId>
+            <artifactId>camunda-bpm-mail-core</artifactId>
+            <version>1.2.0</version>
+        </dependency>-->
 	</dependencies>
 
 	<build>
