--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
         </dependency>
         -->
 		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<!--<version>2.3.11</version>-->
+			<!--<scope>test</scope>-->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
