update of gitignore to not allow configuration files to be added to Github Repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 /.vscode/
-
+# Configuration Files
+application.properties
+application.yml
 ### STS ###
 .apt_generated
 .classpath
