--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@
 #spring.datasource.password=yourpassword
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=validate
-server.port=8090
+#server.port=8080
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
