--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 <groupId>org.devsetgo.bpm.camunda</groupId>
 <artifactId>learning</artifactId>
-<version>0.1.4-SNAPSHOT</version>
+<version>0.1.4</version>
 <packaging>jar</packaging>
 
 <name>learning-camunda</name>
@@ -24,6 +24,7 @@
 	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	<java.version>1.8</java.version>
 	<camunda.spring.boot.starter.version>3.0.0</camunda.spring.boot.starter.version>
+	<docker.image.prefix>mikeryan56/learning-camunda</docker.image.prefix>
 </properties>
 
 <dependencies>
@@ -31,17 +32,23 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter</artifactId>
 	</dependency>
-	<dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<scope>runtime</scope>
-	</dependency>
-	<!-- Postgresql db dependency
+    <!-- Begin DB dependency -->
+    <!--<dependency>-->
+		<!--<groupId>com.h2database</groupId>-->
+		<!--<artifactId>h2</artifactId>-->
+		<!--<scope>runtime</scope>-->
+	<!--</dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
     <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>2.2.6</version>
     </dependency>
-    -->
+    <!-- End DB dependency -->
+    <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
 	<dependency>
 		<groupId>org.codehaus.groovy</groupId>
 		<artifactId>groovy-all</artifactId>
@@ -70,11 +77,7 @@
 		<version>${camunda.spring.boot.starter.version}</version>
 		<scope>test</scope>
 	</dependency>
-	<!--<dependency>-->
-	<!--<groupId>javax.servlet</groupId>-->
-	<!--<artifactId>jstl</artifactId>-->
-	<!--<scope>provided</scope>-->
-	<!--</dependency>-->
+
 </dependencies>
 
 <build>
@@ -104,6 +107,22 @@
 				<target>1.8</target>
 			</configuration>
 		</plugin>
+		<!--<plugin>-->
+			<!--<groupId>com.spotify</groupId>-->
+			<!--<artifactId>docker-maven-plugin</artifactId>-->
+			<!--<version>1.1.1</version>-->
+			<!--<configuration>-->
+				<!--<imageName>${docker.image.prefix}/${project.artifactId}</imageName>-->
+				<!--<dockerDirectory>src/main/docker</dockerDirectory>-->
+				<!--<resources>-->
+					<!--<resource>-->
+						<!--<targetPath>/</targetPath>-->
+						<!--<directory>${project.build.directory}</directory>-->
+						<!--<include>${project.build.finalName}.jar</include>-->
+					<!--</resource>-->
+				<!--</resources>-->
+			<!--</configuration>-->
+		<!--</plugin>-->
 
 	</plugins>
 	<finalName>learning-camunda</finalName>
