--- a/pom.xml
+++ b/pom.xml
@@ -33,17 +33,17 @@
 		<artifactId>spring-boot-starter</artifactId>
 	</dependency>
     <!-- Begin DB dependency -->
-    <!--<dependency>-->
-		<!--<groupId>com.h2database</groupId>-->
-		<!--<artifactId>h2</artifactId>-->
-		<!--<scope>runtime</scope>-->
-	<!--</dependency>-->
-    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
     <dependency>
-        <groupId>org.mariadb.jdbc</groupId>
-        <artifactId>mariadb-java-client</artifactId>
-        <version>2.2.6</version>
-    </dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<scope>runtime</scope>
+	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+    <!--<dependency>-->
+        <!--<groupId>org.mariadb.jdbc</groupId>-->
+        <!--<artifactId>mariadb-java-client</artifactId>-->
+        <!--<version>2.2.6</version>-->
+    <!--</dependency>-->
     <!-- End DB dependency -->
     <dependency>
 		<groupId>org.springframework.boot</groupId>
