update of gitignore to remove config files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /.vscode/
 # Configuration Files
 application.properties
+.env
+application-dev.properties
 application.yml
 ### STS ###
 .apt_generated
