--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #spring.profiles.active=dev
 spring.application.name=Learning-Camunda
-
 server.port=8080
-
-
+# Actuator
+management.endpoints.web.exposure.include=* #Enable all endpoints
+#management.endpoints.web.exposure.exclude=loggers # Exclude an endpoint
+#management.endpoint.shutdown.enabled=true # Explict enable an endpoint
 
