--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM openjdk:8
-MAINTAINER Stu Ryan <mikeryan56@gmail.com>
+FROM openjdk:8u171-alpine
+MAINTAINER devsetgo.com
+RUN apk add --no-cache openjdk8
 ENV VIRTUAL_HOST learning-camunda.devsetgo.com
 ENV LETSENCRYPT_HOST learning-camunda.devsetgo.com
 #VOLUME /tmp
