--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   web:
     #build: ../../..
     build: ./
-    image: mikeryan56/learning-camunda:0.1.4.5
-#    image: mikeryan56/learning-camunda:latest
+#    image: mikeryan56/learning-camunda:0.1.4.5
+    image: mikeryan56/learning-camunda:latest
 #    expose:
 #    - 8080
     ports:
-    - "32000:8080"
+    - 32000:8080
 #    volumes:
 #    - .:/code
     environment:
