--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-	<dependency>
-		<groupId>org.codehaus.groovy</groupId>
-		<artifactId>groovy-all</artifactId>
-		<!--<version>2.3.11</version>-->
-		<!--<scope>test</scope>-->
-	</dependency>
+<!--	<dependency>-->
+<!--		<groupId>org.codehaus.groovy</groupId>-->
+<!--		<artifactId>groovy-all</artifactId>-->
+<!--		&lt;!&ndash;<version>2.3.11</version>&ndash;&gt;-->
+<!--		&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
+<!--	</dependency>-->
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
