--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     #build: ../../..
     build: ./
-#    image: mikeryan56/learning-camunda:0.1.4.6
+#    image: mikeryan56/learning-camunda:19.6-7.11
     image: mikeryan56/learning-camunda:latest
 #    expose:
 #    - 8080
