--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
 	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	<java.version>1.8</java.version>
 	<camunda.spring.boot.starter.version>3.3.5</camunda.spring.boot.starter.version>
+	<camundaEngineVersion>7.11.0</camundaEngineVersion>
+	<camundaSpinVersion>1.7.1</camundaSpinVersion>
+	<camundaConnectVersion>1.2.1</camundaConnectVersion>
 	<docker.image.prefix>mikeryan56/learning-camunda</docker.image.prefix>
 </properties>
 
@@ -53,12 +56,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-<!--	<dependency>-->
-<!--		<groupId>org.codehaus.groovy</groupId>-->
-<!--		<artifactId>groovy-all</artifactId>-->
-<!--		&lt;!&ndash;<version>2.3.11</version>&ndash;&gt;-->
-<!--		&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
-<!--	</dependency>-->
+	<dependency>
+		<groupId>org.codehaus.groovy</groupId>
+		<artifactId>groovy-all</artifactId>
+		<version>2.5.8</version>
+		<type>pom</type>
+	</dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
@@ -84,39 +87,37 @@
 	<dependency>
 		<groupId>org.camunda.connect</groupId>
 		<artifactId>camunda-connect-core</artifactId>
-		<version>1.2.1</version>
+		<version>${camundaConnectVersion}</version>
 	</dependency>
-
-
 	<dependency>
 		<groupId>org.camunda.connect</groupId>
 		<artifactId>camunda-connect-http-client</artifactId>
-		<version>1.2.1</version>
+		<version>${camundaConnectVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.camunda.connect</groupId>
 		<artifactId>camunda-connect-soap-http-client</artifactId>
-		<version>1.2.1</version>
+		<version>${camundaConnectVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.camunda.spin</groupId>
 		<artifactId>camunda-spin-core</artifactId>
-		<version>1.7.1</version>
+		<version>${camundaSpinVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.camunda.spin</groupId>
 		<artifactId>camunda-spin-dataformat-all</artifactId>
-		<version>1.7.1</version>
+		<version>${camundaSpinVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.camunda.bpm</groupId>
 		<artifactId>camunda-engine-plugin-spin</artifactId>
-		<version>7.11.0</version>
+		<version>${camundaEngineVersion}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.camunda.bpm</groupId>
 		<artifactId>camunda-engine</artifactId>
-		<version>7.11.0</version>
+		<version>${camundaEngineVersion}</version>
 	</dependency>
 </dependencies>
 
@@ -139,14 +140,14 @@
 				</execution>
 			</executions>
 		</plugin>
-		<plugin>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.8.1</version>
-			<configuration>
-				<source>1.8</source>
-				<target>1.8</target>
-			</configuration>
-		</plugin>
+<!--		<plugin>-->
+<!--			<artifactId>maven-compiler-plugin</artifactId>-->
+<!--			<version>3.8.1</version>-->
+<!--			<configuration>-->
+<!--				<source>1.8</source>-->
+<!--				<target>1.8</target>-->
+<!--			</configuration>-->
+<!--		</plugin>-->
 		<!--<plugin>-->
 			<!--<groupId>com.spotify</groupId>-->
 			<!--<artifactId>docker-maven-plugin</artifactId>-->
