--- a/pom.xml
+++ b/pom.xml
@@ -11,174 +11,387 @@
 <name>learning-camunda</name>
 <description>Learning Camunda - contains basic prccesses to learn from. Source code on Github.com/StuRyan56</description>
 
-<parent>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>2.3.3.RELEASE</version>
-	<relativePath/>
-	<!-- lookup parent from repository -->
-</parent>
+<!--<parent>-->
+<!--	<groupId>org.springframework.boot</groupId>-->
+<!--	<artifactId>spring-boot-starter-parent</artifactId>-->
+<!--	<version>2.3.3.RELEASE</version>-->
+<!--	<relativePath/>-->
+<!--	&lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+<!--</parent>-->
 
 <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	<java.version>1.8</java.version>
-	<camunda.spring.boot.starter.version>7.13.0</camunda.spring.boot.starter.version>
-	<camundaConnectVersion>1.4.0</camundaConnectVersion>
-	<camundaEngineVersion>7.13.0</camundaEngineVersion>
-	<camundaSpinVersion>1.9.0</camundaSpinVersion>
+<!--	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+<!--	<java.version>1.8</java.version>-->
+	<!-- Library Dependencies -->
+	<springBoot.version>2.2.8.RELEASE</springBoot.version>
+	<groovy.version>3.0.5</groovy.version>
+	<openapiGenerator.version>4.3.1</openapiGenerator.version>
+	<!-- Camunda versions-->
+	<camundaSpringBoot.version>7.13.0</camundaSpringBoot.version>
+	<camundaConnect.version>1.2.1</camundaConnect.version>
+	<camunda.version>7.13.0</camunda.version>
+	<camundaSpin.version>1.9.0</camundaSpin.version>
+	<!-- Docker Image -->
 	<docker.image.prefix>mikeryan56/learning-camunda</docker.image.prefix>
+	<maven.compiler.source>1.6</maven.compiler.source>
+	<maven.compiler.target>1.6</maven.compiler.target>
 </properties>
 
-<dependencies>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter</artifactId>
-	</dependency>
-    <!-- Begin DB dependency -->
-    <dependency>
-		<groupId>com.h2database</groupId>
-		<artifactId>h2</artifactId>
-		<scope>runtime</scope>
-	</dependency>
-    <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-    <!--<dependency>-->
-        <!--<groupId>org.mariadb.jdbc</groupId>-->
-        <!--<artifactId>mariadb-java-client</artifactId>-->
-        <!--<version>2.2.6</version>-->
-    <!--</dependency>-->
-    <!-- End DB dependency -->
-    <dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-data-jpa</artifactId>
-	</dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-	<dependency>
-		<groupId>org.codehaus.groovy</groupId>
-		<artifactId>groovy-all</artifactId>
-		<version>3.0.5</version>
-		<type>pom</type>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-test</artifactId>
-		<scope>test</scope>
-	</dependency>
-	<!--  Camunda Dependencies -->
-	<dependency>
-		<groupId>org.camunda.bpm.springboot</groupId>
-		<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
-		<version>${camunda.spring.boot.starter.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.bpm.springboot</groupId>
-		<artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
-		<version>${camunda.spring.boot.starter.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.bpm.springboot</groupId>
-		<artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
-		<version>${camunda.spring.boot.starter.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.connect</groupId>
-		<artifactId>camunda-connect-core</artifactId>
-		<version>${camundaConnectVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.connect</groupId>
-		<artifactId>camunda-connect-http-client</artifactId>
-		<version>${camundaConnectVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.connect</groupId>
-		<artifactId>camunda-connect-soap-http-client</artifactId>
-		<version>${camundaConnectVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.spin</groupId>
-		<artifactId>camunda-spin-core</artifactId>
-		<version>${camundaSpinVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.spin</groupId>
-		<artifactId>camunda-spin-dataformat-all</artifactId>
-		<version>${camundaSpinVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.bpm</groupId>
-		<artifactId>camunda-engine-plugin-spin</artifactId>
-		<version>${camundaEngineVersion}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.camunda.bpm</groupId>
-		<artifactId>camunda-engine</artifactId>
-		<version>${camundaEngineVersion}</version>
-	</dependency>
-</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.camunda.bpm</groupId>
+				<artifactId>camunda-engine-rest-openapi</artifactId>
+				<version>${camunda.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator</artifactId>
+				<version>${openapiGenerator.version}}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<version>${openapiGenerator.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.camunda.spin</groupId>
+				<artifactId>camunda-spin-bom</artifactId>
+				<version>${camundaSpin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.camunda.connect</groupId>
+				<artifactId>camunda-connect-bom</artifactId>
+				<version>${camundaConnect.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${springBoot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-<build>
-	<plugins>
-		<plugin>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-			<configuration>
-				<layout>ZIP</layout>
-			</configuration>
-			<executions>
-				<execution>
-					<goals>
-						<goal>repackage</goal>
-					</goals>
-					<configuration>
-						<mainClass>org.devsetgo.bpm.camunda.learning.LearningApplication</mainClass>
-					</configuration>
-				</execution>
-			</executions>
-		</plugin>
-<!--		<plugin>-->
-<!--			<artifactId>maven-compiler-plugin</artifactId>-->
-<!--			<version>3.8.1</version>-->
-<!--			<configuration>-->
-<!--				<source>1.8</source>-->
-<!--				<target>1.8</target>-->
-<!--			</configuration>-->
-<!--		</plugin>-->
-		<!--<plugin>-->
-			<!--<groupId>com.spotify</groupId>-->
-			<!--<artifactId>docker-maven-plugin</artifactId>-->
-			<!--<version>1.1.1</version>-->
-			<!--<configuration>-->
-				<!--<imageName>${docker.image.prefix}/${project.artifactId}</imageName>-->
-				<!--<dockerDirectory>src/main/docker</dockerDirectory>-->
-				<!--<resources>-->
-					<!--<resource>-->
-						<!--<targetPath>/</targetPath>-->
-						<!--<directory>${project.build.directory}</directory>-->
-						<!--<include>${project.build.finalName}.jar</include>-->
-					<!--</resource>-->
-				<!--</resources>-->
-			<!--</configuration>-->
-		<!--</plugin>-->
 
-	</plugins>
-	<finalName>learning-camunda</finalName>
-	<!--<resources>-->
-	<!--<resource>-->
-	<!--<directory>src/main/webapp</directory>-->
-	<!--</resource>-->
-	<!--</resources>-->
-</build>
-<!--<repositories>-->
-<!--<repository>-->
-<!--<id>camunda-bpm-nexus</id>-->
-<!--<name>camunda-bpm-nexus</name>-->
-<!--<url>https://app.camunda.com/nexus/content/groups/public</url>-->
-<!--</repository>-->
-<!--</repositories>-->
+	<dependencies>
+		<dependency>
+			<groupId>org.camunda.bpm.springboot</groupId>
+			<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
+			<version>${camunda.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm.springboot</groupId>
+			<artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
+			<version>${camunda.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm</groupId>
+			<artifactId>camunda-engine</artifactId>
+			<version>${camunda.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm</groupId>
+			<artifactId>camunda-engine-plugin-spin</artifactId>
+			<version>${camunda.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.bpm</groupId>
+			<artifactId>camunda-engine-plugin-connect</artifactId>
+			<version>${camunda.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.connect</groupId>
+			<artifactId>camunda-connect-core</artifactId>
+			<version>${camundaConnect.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.connect</groupId>
+			<artifactId>camunda-connect-http-client</artifactId>
+			<version>${camundaConnect.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.connect</groupId>
+			<artifactId>camunda-connect-soap-http-client</artifactId>
+			<version>${camundaConnect.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.spin</groupId>
+			<artifactId>camunda-spin-core</artifactId>
+			<version>${camundaSpin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.spin</groupId>
+			<artifactId>camunda-spin-dataformat-all</artifactId>
+			<version>${camundaSpin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.spin</groupId>
+			<artifactId>camunda-spin-dataformat-xml-dom</artifactId>
+			<version>${camundaSpin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.camunda.spin</groupId>
+			<artifactId>camunda-spin-dataformat-json-jackson</artifactId>
+			<version>${camundaSpin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>${groovy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+			<version>1.4.200</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId></groupId>-->
+<!--			<artifactId></artifactId>-->
+<!--			<version>${}</version>-->
+<!--		</dependency>-->
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${springBoot.version}</version>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+		<finalName>learning-camunda</finalName>
+	</build>
 
 </project>
+
+<!--	<dependencyManagement>-->
+<!--		<dependencies>-->
+<!--			<dependency>-->
+<!--				<groupId>org.camunda.connect</groupId>-->
+<!--				<artifactId>camunda-connect-bom</artifactId>-->
+<!--				<scope>import</scope>-->
+<!--				<type>pom</type>-->
+<!--				<version>${camundaConnectVersion}</version>-->
+<!--			</dependency>-->
+<!--		</dependencies>-->
+<!--	</dependencyManagement>-->
+
+<!--	<properties>-->
+<!--		<version.camunda>7.13.0</version.camunda>-->
+<!--		<maven.compiler.source>1.8</maven.compiler.source>-->
+<!--		<maven.compiler.target>1.8</maven.compiler.target>-->
+<!--		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+<!--	</properties>-->
+
+
+<!--	<dependencyManagement>-->
+<!--		<dependencies>-->
+<!--			<dependency>-->
+<!--				<groupId>org.camunda.bpm</groupId>-->
+<!--				<artifactId>camunda-bom</artifactId>-->
+<!--				<scope>import</scope>-->
+<!--				<type>pom</type>-->
+<!--				<version>${version.camunda}</version>-->
+<!--			</dependency>-->
+<!--		</dependencies>-->
+<!--	</dependencyManagement>-->
+
+<!--	<dependencies>-->
+<!--		<dependency>-->
+<!--			<groupId>org.camunda.bpm</groupId>-->
+<!--			<artifactId>camunda-engine</artifactId>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.camunda.bpm</groupId>-->
+<!--			<artifactId>camunda-engine-plugin-connect</artifactId>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.camunda.connect</groupId>-->
+<!--			<artifactId>camunda-connect-http-client</artifactId>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.camunda.bpm</groupId>-->
+<!--			<artifactId>camunda-engine-plugin-spin</artifactId>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.camunda.spin</groupId>-->
+<!--			<artifactId>camunda-spin-dataformat-json-jackson</artifactId>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>junit</groupId>-->
+<!--			<artifactId>junit</artifactId>-->
+<!--			<version>4.11</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>com.h2database</groupId>-->
+<!--			<artifactId>h2</artifactId>-->
+<!--			<version>1.3.171</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+
+<!--		&lt;!&ndash; redirect slf4j logging to jdk logging &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.slf4j</groupId>-->
+<!--			<artifactId>slf4j-jdk14</artifactId>-->
+<!--			<version>1.7.12</version>-->
+<!--		</dependency>-->
+
+<!--	</dependencies>-->
+
+<!--<dependencies>-->
+<!--	<dependency>-->
+<!--		<groupId>org.springframework.boot</groupId>-->
+<!--		<artifactId>spring-boot-starter</artifactId>-->
+<!--	</dependency>-->
+<!--    &lt;!&ndash; Begin DB dependency &ndash;&gt;-->
+<!--    <dependency>-->
+<!--		<groupId>com.h2database</groupId>-->
+<!--		<artifactId>h2</artifactId>-->
+<!--		<scope>runtime</scope>-->
+<!--	</dependency>-->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client &ndash;&gt;-->
+<!--    &lt;!&ndash;<dependency>&ndash;&gt;-->
+<!--        &lt;!&ndash;<groupId>org.mariadb.jdbc</groupId>&ndash;&gt;-->
+<!--        &lt;!&ndash;<artifactId>mariadb-java-client</artifactId>&ndash;&gt;-->
+<!--        &lt;!&ndash;<version>2.2.6</version>&ndash;&gt;-->
+<!--    &lt;!&ndash;</dependency>&ndash;&gt;-->
+<!--    &lt;!&ndash; End DB dependency &ndash;&gt;-->
+<!--    <dependency>-->
+<!--		<groupId>org.springframework.boot</groupId>-->
+<!--		<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--	</dependency>-->
+<!--    <dependency>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--    </dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.codehaus.groovy</groupId>-->
+<!--		<artifactId>groovy-all</artifactId>-->
+<!--		<version>3.0.5</version>-->
+<!--		<type>pom</type>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.springframework.boot</groupId>-->
+<!--		<artifactId>spring-boot-starter-test</artifactId>-->
+<!--		<scope>test</scope>-->
+<!--	</dependency>-->
+<!--	&lt;!&ndash;  Camunda Dependencies &ndash;&gt;-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.bpm.springboot</groupId>-->
+<!--		<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>-->
+<!--		<version>${camunda.spring.boot.starter.version}</version>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.bpm.springboot</groupId>-->
+<!--		<artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>-->
+<!--		<version>${camunda.spring.boot.starter.version}</version>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.bpm.springboot</groupId>-->
+<!--		<artifactId>camunda-bpm-spring-boot-starter-test</artifactId>-->
+<!--		<version>${camunda.spring.boot.starter.version}</version>-->
+<!--		<scope>test</scope>-->
+<!--	</dependency>-->
+
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.connect</groupId>-->
+<!--		<artifactId>camunda-connect-core</artifactId>-->
+<!--	</dependency>-->
+
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.connect</groupId>-->
+<!--		<artifactId>camunda-connect-connectors-all</artifactId>-->
+<!--	</dependency>-->
+<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;		<groupId>org.camunda.connect</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<artifactId>camunda-connect-connectors-all</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<version>${camundaConnectVersion}</version>&ndash;&gt;-->
+<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;		<dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;		<groupId>org.camunda.connect</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<artifactId>camunda-connect-core</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<version>${camundaConnectVersion}</version>&ndash;&gt;-->
+<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;		<groupId>org.camunda.connect</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<artifactId>camunda-connect-http-client</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<version>${camundaConnectVersion}</version>&ndash;&gt;-->
+<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;	<dependency>&ndash;&gt;-->
+<!--&lt;!&ndash;		<groupId>org.camunda.connect</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<artifactId>camunda-connect-soap-http-client</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;		<version>${camundaConnectVersion}</version>&ndash;&gt;-->
+<!--&lt;!&ndash;	</dependency>&ndash;&gt;-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.spin</groupId>-->
+<!--		<artifactId>camunda-spin-core</artifactId>-->
+<!--		<version>${camundaSpinVersion}</version>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.spin</groupId>-->
+<!--		<artifactId>camunda-spin-dataformat-all</artifactId>-->
+<!--		<version>${camundaSpinVersion}</version>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.bpm</groupId>-->
+<!--		<artifactId>camunda-engine-plugin-spin</artifactId>-->
+<!--		<version>${camundaEngineVersion}</version>-->
+<!--	</dependency>-->
+<!--	<dependency>-->
+<!--		<groupId>org.camunda.bpm</groupId>-->
+<!--		<artifactId>camunda-engine-plugin-connect</artifactId>-->
+<!--		<scope>provided</scope>-->
+<!--	</dependency>-->
+<!--</dependencies>-->
+
+<!--<build>-->
+<!--	<plugins>-->
+<!--		<plugin>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--			<version>2.3.3.RELEASE</version>-->
+<!--			<configuration>-->
+<!--				<layout>ZIP</layout>-->
+<!--			</configuration>-->
+<!--			<executions>-->
+<!--				<execution>-->
+<!--					<goals>-->
+<!--						<goal>repackage</goal>-->
+<!--					</goals>-->
+<!--					<configuration>-->
+<!--						<mainClass>org.devsetgo.bpm.camunda.learning.LearningApplication</mainClass>-->
+<!--					</configuration>-->
+<!--				</execution>-->
+<!--			</executions>-->
+<!--		</plugin>-->
+<!--	</plugins>-->
+<!--	<finalName>learning-camunda</finalName>-->
+<!--</build>-->
+
+<!--</project>-->
